--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tus-js-client",
-  "version": "2.3.0",
+  "name": "@sisukas/tus-js-client",
+  "version": "2.3.1",
   "description": "A pure JavaScript client for the tus resumable upload protocol",
   "main": "lib.es5/node/index.js",
   "module": "lib.esm/node/index.js",
@@ -9,9 +9,6 @@
     "lib.es5/**/*",
     "lib.esm/**/*",
     "dist/**/*",
-    "demos/**/*",
-    "bin/**/*",
-    "test/**/*",
     "lib/index.d.ts"
   ],
   "browser": {
@@ -22,7 +19,7 @@
   "types": "./lib/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tus/tus-js-client.git"
+    "url": "https://github.com/sisukasco/tus-js-client.git"
   },
   "keywords": [
     "tus",
@@ -85,6 +82,7 @@
     "url-parse": "^1.4.3"
   },
   "scripts": {
+    "release": "yarn publish  --access public",
     "build-test-bundle": "mkdir -p dist && browserify test/spec/browser-index.js -t [ babelify --plugins [ @babel/transform-modules-commonjs ] ] -d -o dist/browser-test-bundle.js",
     "build-bundle": "mkdir -p dist && browserify lib/browser/index.js -t [ babelify --plugins [ @babel/transform-modules-commonjs ] ] -s tus -d | exorcist ./dist/tus.js.map > dist/tus.js",
     "build-minify": "uglifyjs ./dist/tus.js -o ./dist/tus.min.js --compress --mangle --source-map \"content='./dist/tus.js.map',url='tus.min.js.map'\"",
